@@ -56,12 +56,11 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
-
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
 
 tasks.withType(JavaCompile) {
